--- a/微信官网/html/resources/css/ZoomPic.css
+++ b/微信官网/html/resources/css/ZoomPic.css
@@ -2,7 +2,7 @@
 
 
 /* reset */
-body{font:12px/18px "宋体",arial,sans-serif;color:#585858;}
+body{font:12px/18px "微软雅黑",arial,sans-serif;color:#585858;}
 
 body,div,p,span,form,iframe,table,td,th,input,textarea,button,label,ul,ol,li,dl,dt,dd,h1,h2,h3,h4,h5,h6{margin:0;padding:0;}
 h1,h2,h3,h4,h5,h6{font-size:100%; }
