--- a/微信官网/html/resources/css/main.css
+++ b/微信官网/html/resources/css/main.css
@@ -300,17 +300,84 @@ a{color:#575757;text-decoration:none;}
 .header-tab {
 	background-color:#bfe3fb;
 	text-align: center;
-	color: #89b1cd;
-	font-size: 16px;
+	color: #03558d;
+	font-size: 14px;
 }
 .header-tab a {
 	display: inline-block;
-	width: 48%;
-	line-height: 40px;
+	width: 30%;
+	line-height: 30px;
+	color: #89b1cd;
 }
 .header-tab a.cur {
 	color: #03558d;
 	font-weight: bold;
+}
+.community {
+	background-color: #ebebeb;
+}
+.community-list {
+	min-height: 240px;
+	padding: 5px;
+	overflow: hidden;
+}
+.community-item {
+	background-color: #fff;
+	box-shadow: 0 1px 2px #cacaca;
+	border-radius: 4px;
+	margin-bottom: 8px;
+}
+.community-item-header {
+	overflow: hidden;
+	padding: 10px;
+}
+.avatar {
+	float: left;
+	width: 35px;
+	height: 35px;
+	border-radius: 50px;
+	margin-right: 10px;
+}
+.community-item-header .time {color: #999;}
+.community-txt {
+	padding: 0 13px 10px;
+	font-size: 14px;
+}
+.comment-box {
+	overflow: hidden;
+	text-align: right;
+	padding-bottom: 10px;
+}
+.comment-box a {
+	display: inline-block;
+	margin-right: 10px;
+	background: url(../imgs/community-icon.png) left center no-repeat;
+	padding-left: 22px;
+	color: #999;
+}
+.comment-box a.coment {
+	background-position: -62px center;
+}
+.comment-list {
+	border-top: 1px solid #e9e9e9;
+	background-color: #fbfbfb;
+	border-radius: 0 0 4px 4px;
+	padding: 10px;
+}
+.comment-list li {
+	overflow: hidden;
+	padding-bottom: 5px;
+}
+.comment-list .avatar {
+	width: 20px;
+	height: 20px;
+	margin: 0;
+}
+.comment-list span {
+	display: inline-block;
+}
+.comment-list p {
+	margin-left: 25px;
 }
 
 footer {
