--- a/微信官网/html/resources/css/main.css
+++ b/微信官网/html/resources/css/main.css
@@ -379,7 +379,24 @@ a{color:#575757;text-decoration:none;}
 .comment-list p {
 	margin-left: 25px;
 }
-
+.publish {
+	display: inline-block;
+	padding-left: 30px;
+	background: url(../imgs/publish.png) 0 center no-repeat;
+	color: #fff;
+}
+.reply, .reply-bg {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	z-index: 99;
+	top: 0;
+	left: 0;
+}
+.reply-bg {
+	background-color: #000;
+	opacity: 0.3;
+}
 footer {
 	position: fixed;
 	width: 100%;
