--- a/微信官网/html/resources/css/main.css
+++ b/微信官网/html/resources/css/main.css
@@ -318,7 +318,7 @@ a{color:#575757;text-decoration:none;}
 }
 .community-list {
 	min-height: 240px;
-	padding: 5px;
+	padding: 5px 5px 40px;
 	overflow: hidden;
 }
 .community-item {
@@ -326,6 +326,9 @@ a{color:#575757;text-decoration:none;}
 	box-shadow: 0 1px 2px #cacaca;
 	border-radius: 4px;
 	margin-bottom: 8px;
+}
+.community-item h4 {
+	padding: 0 10px;
 }
 .community-item-header {
 	overflow: hidden;
@@ -387,16 +390,27 @@ a{color:#575757;text-decoration:none;}
 }
 .reply, .reply-bg {
 	position: fixed;
-	width: 100%;
-	height: 100%;
+	width: 100%;	
 	z-index: 99;
 	top: 0;
 	left: 0;
 }
+.reply {
+	background-color: #fff;
+}
+.reply .search-txt {
+	float: none;
+	display: block;
+	width: 99%;
+	height: 120px;
+	margin: 5px auto;
+}
 .reply-bg {
 	background-color: #000;
 	opacity: 0.3;
+	height: 100%;
 }
+.reply-btns {padding: 0 5px 10px; text-align: right;}
 footer {
 	position: fixed;
 	width: 100%;
