--- a/微信官网/html/resources/css/weishouye.css
+++ b/微信官网/html/resources/css/weishouye.css
@@ -110,7 +110,10 @@ body{
 	display: none;
 }
 .body .bg_black{
-	background:url("../imgs/bg/weixin-bg.jpg") no-repeat center top #fff;background-size:100% 100%;
+	width: 100%;
+	height: 100%;
+	background:url("../imgs/bg/weixin-bg.jpg") no-repeat center top #fff;
+	background-size:100% 100%;
 }
 
 #mcover {
