--- a/微信官网/html/resources/css/main.css
+++ b/微信官网/html/resources/css/main.css
@@ -247,7 +247,13 @@ a{color:#575757;text-decoration:none;}
 	padding-right: 10px;
 }
 .info p {
-	min-height: 130px;
+	/*min-height: 130px;*/
+}
+.intro-txt {
+	font-size: 14px;
+	display: block;
+	font-weight: bold;
+	color: #4081ad;
 }
 .more-info {display: none;}
 .reservation-info {
@@ -402,11 +408,27 @@ a{color:#575757;text-decoration:none;}
 	margin-bottom: 8px;
 }
 .community-item h4 {
-	padding: 0 10px;
+	padding: 0 26px;
+	background: url(../imgs/reply-icon.png) 3px center no-repeat;
 }
 .community-item-header {
 	overflow: hidden;
 	padding: 10px;
+}
+.line {
+	height: 1px;
+	overflow: hidden;
+	background-color: #e9e9e9;
+	margin: 5px 0;
+}
+.line span {
+	float: left;
+	width: 80px;
+	height: 100%;
+	background-color: #478ab0;
+}
+.all-shown {
+	text-align: center;
 }
 .avatar {
 	float: left;
@@ -452,7 +474,9 @@ a{color:#575757;text-decoration:none;}
 }
 .comment-list span {
 	display: inline-block;
+	color: #4081ad;
 }
+p.comment-box {padding-top: 10px;}
 .comment-list p {
 	margin-left: 25px;
 }
@@ -485,6 +509,17 @@ a{color:#575757;text-decoration:none;}
 	height: 100%;
 }
 .reply-btns {padding: 0 5px 10px; text-align: right;}
+.upload span {
+	float: left;
+	border: 1px dashed #cecece;
+	padding: 10px;
+	background: url(../imgs/upload.png) center center no-repeat;
+}
+.upload input {
+	width: 50px;
+	height: 50px;
+	opacity: 0;
+}
 footer {
 	position: fixed;
 	width: 100%;
