--- a/学习微信网站/html/resources/css/main.css
+++ b/学习微信网站/html/resources/css/main.css
@@ -2,14 +2,15 @@
 
 
 /* reset */
-body{font:12px/18px "微软雅黑",arial,sans-serif;color:#585858;}
+html, body {min-height: 100%;}
+body{font:0.8em/1.5 "微软雅黑",arial,sans-serif;color:#585858; background-color: #f7f7f9;}
 
 body,div,p,span,form,iframe,table,td,th,input,textarea,button,label,ul,ol,li,dl,dt,dd,h1,h2,h3,h4,h5,h6{margin:0;padding:0;}
 h1,h2,h3,h4,h5,h6{font-size:100%; }
 ul,ol,li,dl{list-style-type:none;}
 em,i,dfn,cite,strong,small{font-style:normal;} 
 img{border:0;}
-fieldset,button,input,select,option{vertical-align:middle;font:12px/18px "微软雅黑",arial,sans-serif;}
+button,input,select,option{vertical-align:middle;font:12px/18px "微软雅黑",arial,sans-serif;}
 table{border-collapse:collapse;border-spacing:0}
 textarea{resize:none}
 
@@ -17,7 +18,6 @@ textarea{resize:none}
 a{color:#575757;text-decoration:none;}
 
 /* clearfix */
-.clearfix{ *zoom:1; width:100%; height:100%;}
 .clearfix:after{ display:table; line-height:0; content:""; clear:both;}
 
 /* public.omission */
@@ -27,525 +27,130 @@ a{color:#575757;text-decoration:none;}
 .mt10{ margin-top:10px;}     .mt15{ margin-top:15px;}      .mb10{ margin-bottom:10px;}   .mb15{ margin-bottom:15px;}
 .pdr10 {padding-right: 10px;}
 .block {display: block;}
-.blue {color: #03558d; text-decoration: underline;}
-*{-webkit-box-sizing: border-box; margin:0px; padding:0px;}
-.wrap {padding-bottom: 40px; /*max-width: 640px; margin: 0 auto;*/}
+.wrap {padding-bottom: 36px; max-width: 640px; margin: 0 auto; min-height: 100%;}
 .header {
-	height: 50px;
-	background: #0f72ad url(../imgs/bg/header.png) center 0 no-repeat;
+	height: 100px;
+	background: #ececec center center no-repeat;
+	background-position: auto 100%;
 	overflow: hidden;
-}
-.header h1 {
-	font-size: 22px;
-	line-height: 50px;
-	text-align: center;
-	color: #fff;
-	font-weight: normal;
-}
-.go-back {
-	float: left;
-	margin: 16px 0 0 5px;
-	background: url(../imgs/bg/goback.png) 0 center no-repeat;
-	color: #fff;
-	padding-left: 18px;
-	font-size: 14px;
-}
-.to-home {
-	float: right;
-	width: 28px;
-	height: 35px;
-	background-image: url(../imgs/bg/gohome.png);
-	margin: 12px 10px 0 0;
-}
-.list li {
-	width: 100%;
-	float: left;
-	border-bottom: 1px solid #b4b4b4;
-}
-.list li {
-	background: url(../imgs/bg/arrow.png) 95% center no-repeat;
-}
-.list-icon a,.sections-icon a {
-	font-size: 18px;
-	display: block;
-	height: 60px;
-	line-height: 60px;
-	padding-left: 95px;
-	color: #767676;
-	background: url(../imgs/bg/icons.png) 20px 2px no-repeat;
-}
-.list-icon a.list-link2 {background-position: 20px -78px;}
-.list-icon a.list-link3 {background-position: 20px -158px;}
-.list-icon a.list-link4 {background-position: 20px -238px;}
-.list-icon a.list-link5 {background-position: 20px -318px;}
-.list-icon a.list-link6 {background-position: 20px -478px;}
-.list-icon a.list-link7 {background-position: 20px -558px;}
-.list-icon a.list-link8 {background-position: 20px -638px;}
-.list-icon a.list-link9 {background-position: 20px -718px;}
-.list-icon a.list-link10 {background-position: 20px -798px;}
-.list-icon a.list-link11 {background-position: 20px -878px;}
-.list-icon a.list-link12 {background-position: 20px -958px;}
-
-.list-news li {
-	background-image: url(../imgs/bg/arrow-blue.png);
-	padding: 5px 0;
-}
-.list-news a {
-	display: block;
-	overflow: hidden;
-}
-.list-news img {
-	float: left;
-	width: 72px;
-	height: 72px;
-	margin: 0 10px 0 15px;
-}
-.list-news span {
-	display: block;
-	margin: 10px 15% 5px 0;
-	font-size: 16px;
-	color: #4081ad;
-}
-.list-news i {
-	color: #9e9e9e;
-	font-size: 14px;
-}
-.section-intro i {
-	display: block;
-	margin: 0 15% 0 0;
-	font-size: 12px;
-}
-.sections-icon a {
-	height: 60px;
-	line-height: 60px;
-	background-position: 20px -395px;
-	padding-left: 85px;
-}
-.search-box {
-	border-bottom: 1px solid #b4b4b4;
-	padding: 10px 5px;
-}
-.search-txt {
-	width: 68%;
-	float: left;
-	height: 35px;
-	border: 1px solid #89b1cd;
-	border-radius: 2px;
-}
-.search-btn {
-	float: right;
-	width: 30%;
-	height: 35px;
-	border:1px solid #89b1cd;
-	background: #bfe3fb;
-	border-radius: 3px;
-	color: #03558d;
-	font-size: 16px;
-}
-.search-box label,.search-box .label {
-	float: left;
-	margin: 0 10px 10px 0;
-}
-.article {
-	color: #666;
-}
-.article-title 
-{
-    font-size:16px;
-    text-align:center;
-    color:#333;
-    padding:10px 0 5px;
-}
-.sub-title {
-	text-align: center;
-	color: #999;
-	padding: 12px 0;
-}
-.sub-title span {color: #3e81ad;}
-.article img {
-	display: block;
-	margin: 0 auto 10px;
-}
-.article article {
-	margin: 0 20px 10px;
-}
-.article p {
-	text-indent: 24px;
-	margin-bottom: 10px;
-}
-
-.table {
-	margin: 10px 0;	
-}
-.border-top {
-	border-top: 1px dashed #89b1cd;
-	padding-top: 10px;
-}
-.table table {
-	width: 100%;
-}
-.table th,.table td {
-	text-align: center;
-	border:1px solid #89b1cd;
-	padding: 5px;
-	font-size: 14px;
-	line-height: 26px;
-}
-.table th {background: #f2f7ff;}
-.reservation,.reservation-disabled {
-	border:1px solid #89b1cd;
-	background: #bfe3fb;
-	border-radius: 3px;
-	color: #03558d;
-	font-size: 14px;
-	font-weight: bold;
-	padding: 0 10px;
-	min-width: 30px;
-	height: 26px;
-	line-height: 26px;
-	display: inline-block;
-	text-align: center;
-	max-width: 640px;
-}
-.reservation-disabled {
-	background: #eee;
-	color: #868686;
-	border-color: #aaa;
-}
-.big-btn {
-	display: block;
-	width: 95%;
-	height: 40px;
-	line-height: 40px;
-	font-size: 16px;
-	background: #6baedb;
-	color: #fff;
-	margin: 0 auto;
-}
-.question {
-	padding: 0 10px;
-}
-.question .big-btn {
-	width: 48%;
-	margin: 0;
-}
-.info li {
-	border-bottom: 1px dashed #89b1cd;
-	padding-bottom: 10px;
-	margin-bottom: 10px;
-}
-.info table {
-	width: 100%;
-}
-.info img {
-	width: 80px;
-}
-.info td {
-	vertical-align: top;
-}
-.info-header {
-	padding-right: 10px;
-}
-.info p {
-	/*min-height: 130px;*/
-}
-.info i {color: #4081ad;font-weight: bold;}
-.intro-txt,.intro-txt-block {
-	width: 50%;
-	float: left;
-	line-height: 20px;
-}
-.intro-txt-block {
-	width: 100%;
-}
-.more-info {display: none;}
-.reservation-info {
-	padding:10px 0 0;
-	text-align: center;
-	font-size: 16px;
-	color: #03558d;
-	font-weight: bold;
-}
-.reservation-info span {
-	display: inline-block;
-	padding: 0 5px;
-}
-.list-imgs li {
-	float: left;
-	width: 50%;
-	text-align: center;
-}
-.list-imgs a {
-	display: block;
-	border: 1px solid #89b1cd;
-	margin: 15px 10px 0;
-	padding: 10px 0;
-	background: #f2f7ff;
-	color: #03558d;
-	font-weight: bold;
-}
-.list-imgs img {
-	display: block;
-	margin: 0 auto 10px;
-	width: 80%;
-	max-width: 300px;
-}
-.list-question li {
-	border-bottom:1px solid #b4b4b4;
-	padding: 10px;
-}
-.list-question span {
-	color: #03558d;
-	font-weight: bold;
-}
-.list-question p {
-	padding: 5px 10px;
-}
-.answer-txt {
-	background: #f2f7ff;	
-}
-.ask-question {border:none;}
-.ask-question .search-txt {
-	width: 99%;
-	margin-bottom: 10px;
-}
-.col99,.form-item {
-	width: 99%;
-	float: left;
-}
-.form-item {
-	border: 1px solid #ddd;
-	border-radius: 3px;
-	margin-bottom: 10px;
-}
-.form-input {
-	display: block;
-	border-left: 1px solid #ddd;
-	margin-left: 90px;
-	min-height: 35px;
-	background: url(../imgs/text_bg.png) top left repeat-x;
-	overflow: hidden;
-}
-.form-title {
-	float: left;
-	width: 80px;
-	text-align: right;
-	line-height: 35px;
-	color: #03558d;
-	font-size: 14px;
-}
-.form-input input[type=text],.form-input select {
-	border: none;
-	background: none;
-	width: 90%;
-	height: 35px;
-	padding-left: 10px;
-}
-.form-input select {
-	width: 200%;
-	color: #666;
-}
-.form-input label {
-	display: inline-block;
-	margin: 10px 0 0 10px;
-}
-.radio-inputs label {
-	width: 30%;
-	height: 35px;
-	line-height: 35px;
-	text-align: center;
-	border: 1px dashed #999999;
-	color: #999;
-}
-.radio-inputs label.selected {
-	border: 1px solid #6baedb;
-	color: #03558d;
-	background: url(../imgs/bg/selected.png) right bottom no-repeat;
-}
-.notes {
-	clear: both;
-	color: #dc5353;
-}
-.header-tab {
-	background-color:#bfe3fb;
-	text-align: center;
-	color: #03558d;
-	font-size: 14px;
-}
-.header-tab a {
-	display: inline-block;
-	width: 30%;
-	line-height: 30px;
-	color: #89b1cd;
-}
-.header-tab a.cur {
-	color: #03558d;
-	font-weight: bold;
-}
-.exporter a {
-	width: auto;
-	line-height: 24px;
-	margin: 3px 0;
-}
-.exporter a.cur {
-	border:1px solid #89b1cd;
-	background: #0568ac;
-	border-radius: 3px;
-	color: #fff;
-	font-size: 14px;
-	padding: 0 8px;
-	text-align: center;
-}
-.expert {
-	padding: 5px 10px;
-	text-align: left;
-	font-weight: bold;
-}
-.community {
-	background-color: #ebebeb;
-}
-.community-list {
-	min-height: 240px;
-	padding: 5px 5px 40px;
-	overflow: hidden;
-}
-.community-item {
-	background-color: #fff;
-	box-shadow: 0 1px 2px #cacaca;
-	border-radius: 4px;
 	margin-bottom: 8px;
+	box-shadow: 0 3px 5px #cacaca;
 }
-.community-item h4 {
-	padding: 0 26px;
-	background: url(../imgs/reply-icon.png) 3px center no-repeat;
-}
-.community-item-header {
-	overflow: hidden;
-	padding: 10px;
-}
-.line {
-	height: 1px;
-	overflow: hidden;
-	background-color: #e9e9e9;
-	margin: 5px 0;
-}
-.line span {
-	float: left;
+.user-header {
 	width: 80px;
-	height: 100%;
-	background-color: #478ab0;
-}
-.all-shown {
-	text-align: center;
-}
-.avatar {
+	height: 80px;
 	float: left;
-	width: 35px;
-	height: 35px;
-	border-radius: 50px;
+	border-radius: 50%;
+	border: 3px solid #0eac76;
+	margin: 5px 10px 0;
+}
+.header h2 {	
+	color: #005f3f;
+	font-weight: bold;
+	float: left;
+	margin-top: 30px;
+	text-shadow: 2px 2px 3px #fff;
+}
+.header h2 span {
+	display: inline-block;
+	font-size: 1.5em;
 	margin-right: 10px;
 }
-.community-item-header .time {color: #999;}
-.community-txt {
-	padding: 0 13px 10px;
-	font-size: 14px;
-}
-.comment-box {
-	overflow: hidden;
-	text-align: right;
-	padding-bottom: 10px;
-}
-.comment-box a {
-	display: inline-block;
-	margin-right: 10px;
-	background: url(../imgs/community-icon.png) left center no-repeat;
-	padding-left: 22px;
-	color: #999;
-}
-.comment-box a.coment {
-	background-position: -62px center;
-}
-.comment-list {
-	border-top: 1px solid #e9e9e9;
-	background-color: #fbfbfb;
-	border-radius: 0 0 4px 4px;
-	padding: 10px;
-}
-.comment-list li {
-	overflow: hidden;
-	padding-bottom: 5px;
-}
-.comment-list .avatar {
-	width: 20px;
-	height: 20px;
-	margin: 0;
-}
-.comment-list span {
-	display: inline-block;
-	color: #4081ad;
-}
-p.comment-box {padding-top: 10px;}
-.comment-list p {
-	margin-left: 25px;
-}
-.publish {
-	display: inline-block;
-	padding-left: 30px;
-	background: url(../imgs/publish.png) 0 center no-repeat;
-	color: #fff;
-}
-.reply, .reply-bg {
-	position: fixed;
-	width: 100%;	
-	z-index: 99;
-	top: 0;
-	left: 0;
-}
-.reply {
+.nav {
+	float: left;
+	width: 60px;
+	box-shadow: 3px 0 5px #cacaca;
 	background-color: #fff;
+	border-top-right-radius: 5px;
+	min-height: 300px;
 }
-.reply .search-txt {
-	float: none;
+.nav a {
 	display: block;
-	width: 99%;
-	height: 120px;
-	margin: 5px auto;
+	margin: 4px 2px;
+	text-align: center;
+	color: #69696a;
 }
-.reply-bg {
-	background-color: #000;
-	opacity: 0.3;
-	height: 100%;
+.nav i {
+	display: block;
+	width: 40px;
+	height: 40px;
+	margin: 0 auto;
+	overflow: hidden;
+	background-image: url(../imgs/nav-icon.png);
+	background-size: 100% auto;
 }
-.reply-btns {padding: 0 5px 10px; text-align: right;}
-.upload span {
+.nav i.n-1 {background-position: 0 -80px;}
+.nav i.n-2 {background-position: 0 -160px;}
+.nav i.n-3 {background-position: 0 -240px;}
+.nav i.n-4 {background-position: 0 -320px;}
+.nav i.n-5 {background-position: 0 -400px;}
+.nav i.n-6 {background-position: 0 -480px;}
+.main-body {
+	box-shadow: -3px 0 5px #cacaca;
+	background-color: #fff;
+	border-top-left-radius: 5px;
+	min-height: 300px;
+	margin-left: 70px;
+}
+.main-title {
+	padding: 2px 10px 0;
+	height: 30px;
+	background:-webkit-gradient(linear, 0 0, 0 100%, from(#fff), to(#e9e9e9));
+	overflow: hidden;
+	border-bottom: 2px solid #0ea974;
+	border-top-left-radius: 5px;
+}
+.main-title h3 {
 	float: left;
-	border: 1px dashed #cecece;
-	padding: 10px;
-	background: url(../imgs/upload.png) center center no-repeat;
+	font-size: 1.3em;
+	line-height: 30px;
+	color: #0ea974;
+	font-weight: bold;
 }
-.upload input {
-	width: 50px;
-	height: 50px;
-	opacity: 0;
+.main-title .btn {
+	float: right;
+	padding: 3px 5px;
+	color: #fff;
+	background-color: #0ea974;
+	border-radius: 3px;
+	margin-top: 3px;
 }
+.main-list li {border-bottom: 1px solid #d8d8d8; padding-left: 8px;}
+.main-list li a {
+	display: block;
+	width: 100%;
+	height: 28px;
+	line-height: 28px;
+}
+.main-list li.odd {background-color:#f9f9f9;}
+
 footer {
 	position: fixed;
 	width: 100%;
-	height: 40px;
-	line-height: 40px;
+	height: 36px;
+	line-height: 36px;
 	bottom: 0;
-	background-color: #0568ac;
+	background-color: #61706b;
 	text-align: center;
 	color: #fff;
-	font-size: 14px;
 	overflow:hidden;
 }
-footer .go-back {
-	margin: 4px 0 0 5px;
-	line-height:30px;
-	font-size: 14px;
+footer a {
+	color: #fff;
 }
-footer .to-home {
-	margin: 3px 10px 0 0;
+.go-back {
+	float: left;
+	background: url(../imgs/goback.png) 0 center no-repeat;
+	background-size: 14px auto;
+	padding-left: 20px;
+	margin-left: 5px;
+}
+.to-home {
+	float: right;
+	width: 30px;
+	height: 30px;
+	background: url(../imgs/home-icon.png) right 0 no-repeat;
+	background-size: 30px auto;
+	margin: 3px 5px 0 0;
 }
 .noborder {border:none;}
