--- a/学习微信网站/html/resources/css/weishouye.css
+++ b/学习微信网站/html/resources/css/weishouye.css
@@ -2,12 +2,12 @@
 li {list-style: none;}
 body, html {height: 100%;}
 body{
-	font: 1em/1.5 "微软雅黑",arial,sans-serif;;
+	font: 0.8em/1.5 "微软雅黑",arial,sans-serif;
 }
 a {text-decoration: none; color: #3b4e48;}
 .clearfix{}
 .clearfix:after{ display:table; line-height:0; content:""; clear:both;}
-.body{margin:auto;min-height:100%;position:relative;display:block; font-size:12px; min-width:320px; padding-bottom:18px; }
+.body{margin:auto;min-height:100%;position:relative;display:block; min-width:320px; padding-bottom:18px; }
 .body header{height:180px; overflow: hidden;}
 #scroll li {box-shadow:3px 3px 12px #fffcb5;}
 #scroll p {position: absolute; bottom: 0; width: 100%; line-height: 30px; background: rgba(0,0,0,0.5); color: #fff;}
